[package]
name = "aws-fastly-http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastly = "0.11.2"
http = "1.3.1"
aws-config = { version = "1.1.1", default-features = false }
aws-smithy-runtime-api = { version = "1.7.4", features = ["http-02x"] }
aws-smithy-types = "1.1.1"
tokio = { version = "1.35.1", features = ["rt", "time", "sync"] }
futures = "0.3.30"
